--- a/index.html
+++ b/index.html
@@ -790,22 +790,22 @@ footer{
           Build a diversified portfolio of rental properties, commercial real estate, and real-estate-backed loans — all managed by professionals on one investing platform.
         </p>
         <p class="mission">
-          <strong>Low minimums, transparent returns, aligned incentives.</strong>
+          <strong>Low Minimums, Transparent Returns, Aligned Incentives.</strong>
         </p>
         <div class="hero-ctas">
-          <a class="btn" href="#get-started">Start investing with EquiFi</a>
-          <a class="btn secondary" href="#properties">Browse fractional properties</a>
+          <a class="btn" href="#get-started">Invest Now</a>
+          <a class="btn secondary" href="#properties">Browse Investments</a>
         </div>
       </div>
 
       <aside class="hero-card" aria-label="Key investment stats">
         <div class="stat-row">
-          <div class="stat"><span class="meta">Minimum investment</span><strong>$50</strong></div>
+          <div class="stat"><span class="meta">Minimum Investment</span><strong>$50</strong></div>
           <div class="stat"><span class="meta">Properties</span><strong>100+</strong></div>
           <div class="stat"><span class="meta">Members</span><strong>500+</strong></div>
         </div>
         <div class="bar-container">
-          <span class="meta">Portfolio mix</span>
+          <span class="meta"><strong>Portfolio Mix</strong></span>
           <div class="bar-chart" aria-hidden="true">
             <div class="bar" style="height:96px;background:linear-gradient(180deg,#22c55e,#16a34a)">Single-family</div>
             <div class="bar" style="height:68px;background:linear-gradient(180deg,#06b6d4,#0891b2)">CRE debt</div>
@@ -820,8 +820,7 @@ footer{
       <div class="container">
         <p>
           <strong>EquiFi</strong> is a fractional real estate investing platform that lets you buy shares in real estate assets and real-estate-backed debt, combining steady income with long-term growth potential.
-          Invest in rental homes, commercial properties, or fixed-income notes backed by real assets.
-          Our team underwrites, manages, and services every investment — you simply choose your exposure and track your portfolio.
+          Invest in rental homes, commercial properties, or fixed-income notes backed by real assets. Our team underwrites, manages, and services every investment — you simply choose your exposure and track your portfolio.
         </p>
       </div>
     </div>
@@ -1212,3 +1211,4 @@ footer{
 <script src="https://js-na2.hsforms.net/forms/embed/244309246.js" defer></script>
 </body>
 </html>
+
