--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="canonical" href="https://www.equifi.info/" />
+<meta property="og:url" content="https://www.equifi.info/" />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -1211,4 +1213,5 @@ footer{
 <script src="https://js-na2.hsforms.net/forms/embed/244309246.js" defer></script>
 </body>
 </html>
+
 
